Mobile search bar fixes (#1032)
* Mobile search bar fixes

# Fixed
- Fixed: Fixed an issue with longer usernames causing header to wrap to another line. (develop)
- Fixed: Fixed an issue where the close button for the search was not centered on mobile. Verified on iOS Safari and iOS Chrome. (develop)

* Adding artist to search, fixing cover artist in search

--- a/UI/Web/src/app/grouped-typeahead/grouped-typeahead.component.scss
+++ b/UI/Web/src/app/grouped-typeahead/grouped-typeahead.component.scss
@@ -41,6 +41,14 @@ input {
         right: 10px;
     }
 
+    @media only screen and (max-width:650px) {
+        .close {
+            top: 50%;
+            transform: translate(0, -60%);
+        }
+    }
+
+
     input {
         outline: 0 !important;
         border-radius: .28571429rem;
