--- a/UI/Web/src/app/nav-header/nav-header.component.scss
+++ b/UI/Web/src/app/nav-header/nav-header.component.scss
@@ -14,7 +14,7 @@ $bg-color: rgb(22, 27, 34);
 /* small devices (phones, 650px and down) */
 @media only screen and (max-width:650px) { //370
     .navbar-nav {
-        width: 34%;
+        width: 0;
     }
 }
 
